[package]
name = "watcheRS"
authors = ["Krzysztof Mierzejewski"]
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
uu_tail = { git = "https://github.com/uutils/coreutils.git", tag = "0.0.28", version = "0.0" }
expanduser = { version = "1.2" }
ctrlc = {  version = "3.4.5" }
chrono = "0.4"

[profile.release]
split-debuginfo = "packed"
debug = false
debug-assertions = false
strip = "symbols"
opt-level = "s" # "z"
